k8s/skaffold/deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: hugo-website-dev
  namespace: dev
  annotations:
    app.openshift.io/vcs-ref: main
    app.openshift.io/vcs-uri: 'https://github.com/smichard/hugo_website'
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hugo-website-dev
  template:
    metadata:
      labels:
        app: hugo-website-dev
        deployment: hugo-website-dev
    spec:
      containers:
        - name: hugo-website-dev
          image: quay.io/michard/hugo_website:latest
          ports:
            - containerPort: 8080
              protocol: TCP
          imagePullPolicy: Always
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
