k8s/skaffold/route.yml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: hugo-website-dev
  namespace: dev
  labels:
    app: hugo-website-dev
  annotations:
    openshift.io/host.generated: 'true'
spec:
  host: hugo-website-dev.apps.ocp.michard.cc
  to:
    kind: Service
    name: hugo-website-dev
  port:
    targetPort: 8080-tcp
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
